crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_interrupted.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Interrupted after 1.8s (5 of 11 inspectors completed)
