crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_non_success_tally.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 4s (1 failed, 1 degraded)
  Report: /tmp/report.tar.gz
  To review: inspectah refine /tmp/report.tar.gz
