crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_write_failure.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 2s
  Error: Permission denied: /opt/report.tar.gz
