crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_no_color.snap
---
source: crates/cli/src/progress/pretty.rs
expression: text
---
  ✓ RPM packages                 613 packages, 6 repos
  ○ SELinux                      skipped (disabled)
  ✗ Containers                   failed: podman not found
