crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_nonrpm_sub_lines.snap
---
source: crates/cli/src/progress/pretty.rs
expression: text
---
  ✓ Non-RPM packages             4 ecosystems
      pip packages 23 · npm packages 69 · gem packages 5 · git repos 12
