crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_normal_11_inspectors.snap
---
source: crates/cli/src/progress/pretty.rs
expression: output_text(&buf)
---
  ✓ RPM packages                 613 packages, 6 repos
  ✓ Services                     42 units
  ✓ Storage                      done
  ✓ Kernel & boot                done
  ✓ Network                      done
  ✓ Containers                   3 found
  ✓ Users & groups               done
  ✓ Scheduled tasks              5 timers
  ✓ Config files                 37 modified
  ✓ SELinux                      done
  ✓ Non-RPM packages             2 ecosystems
      pip packages 23 · npm packages 69
