crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_skipped_without_start.snap
---
source: crates/cli/src/progress/pretty.rs
expression: text
---
  ○ SELinux                      skipped (disabled)
