crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_summary_clean_host.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 1.3s
  Report: /tmp/report.tar.gz
  To review: inspectah refine /tmp/report.tar.gz
