crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_verbose_atomic_parent_child.snap
---
source: crates/cli/src/progress/pretty.rs
expression: text
---
  ✓ Services                     42 units
      ▸ Querying installed packages
      ✓ Querying installed packages done
  ✓ Network                      done
