crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_verbose_rpm_substeps.snap
---
source: crates/cli/src/progress/pretty.rs
expression: output_text(&buf)
---
  ✓ RPM packages                 847 packages, 8 repos
      ✓ Querying installed packages done
      ✓ Resolving source repositories done
      ✓ Classifying packages     done
