crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_with_failures.snap
---
source: crates/cli/src/progress/pretty.rs
expression: output_text(&buf)
---
  ✓ RPM packages                 613 packages, 6 repos
  ✓ Services                     42 units
  ✓ Storage                      done
  ✓ Kernel & boot                done
  ✓ Network                      done
  ✗ Containers                   failed: podman not found
  ✓ Users & groups               done
  ✓ Scheduled tasks              done
  ⚠ Config files                 37 modified (rpm verify timed out)
  ○ SELinux                      skipped (disabled)
  ✓ Non-RPM packages             done
